--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Aragon App</title>
+        <title>Issuance App</title>
     </head>
     <body>
         <div id="root"></div>
